# symbolgen

./: .gitignore  Cargo.toml  Makefile  README.md
integrate/: check  generate.png.sha512
src/: lib.rs
symbolgen/: Cargo.toml
symbolgen/src/: main.rs
symbolgen_core/: Cargo.toml
symbolgen_core/src/: lib.rs
