[package]
name = "symbolgen"
version = "0.1.0"
authors = ["Tom Milligan <tom@reinfer.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.8.1", features = ["png", "svg"] }
nalgebra = "0.19.0"
rand = "0.7.3"
rand_chacha = "0.2.1"
